71 entries, right whitespace fixed

--- a/main-style.css
+++ b/main-style.css
@@ -322,14 +322,13 @@ a:hover, a:active {
 	text-align: center;
     bottom: 0px ;
     width: 100%;
-    height: 40px; 
+    height: 30px; 
     background: lightgray ;
     opacity: 1.0;
 }
 
 #back-to-top{
 	float: left;
-	font-size: 25px;
 	color: steelblue;
 	padding-top: 3px;
 }
